Test issues resolved

--- a/src/assets/stylesheets/componentStyles/device-groups.scss
+++ b/src/assets/stylesheets/componentStyles/device-groups.scss
@@ -193,9 +193,9 @@
       width: 108px;
       text-align: start;
       margin-right: 1rem;
-      border: 1px solid #D8D8D8;
+      border: 1px solid #d8d8d8;
       border-radius: 4px;
-      background: #D8D8D8;
+      background: #d8d8d8;
     }
     .back-btn {
       color: #0063f7;
