--- a/src/app/side-navbar/side-navbar.component.html
+++ b/src/app/side-navbar/side-navbar.component.html
@@ -28,7 +28,7 @@
     >
       <mat-option
         *ngFor="let site of sites; let siteIndex = index"
-        value="site['siteID']"
+        [value]="site['siteID']"
         (click)="selectedSite(site['siteID'])"
         >{{ site["siteName"] }}</mat-option
       >
