--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,3 +33,34 @@ body {
     padding: 0;
   }
 }
+.audit-user-modal-container {
+  [class~="mat-dialog-container"] {
+    padding: 16px;
+  }
+  [class~="mat-content"] {
+    .row {
+      width: 100%;
+    }
+  }
+  [class~="mat-expanded"] {
+    background-color: #f0f3fa;
+    // height: 30px;
+    // margin-top: 10px;
+    &:hover {
+      background-color: #f0f3fa;
+    }
+  }
+  [class~="mat-expansion-panel"] {
+    border-bottom: 1px solid #d8d8d8;
+    box-shadow: none;
+    &:last-child {
+      border-bottom: none;
+    }
+  }
+  [class~="mat-expansion-panel-content"] {
+    background-color: #f0f3fa;
+  }
+  [class~="mat-expansion-panel-spacing"] {
+    margin: 0;
+  }
+}
