--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,8 @@ body {
 // global
 
 body {
-  background: #edf4ff !important;
+  // background: #edf4ff !important;
+  background: #F0F3FA !important;
 }
 .form-field-area-login,
 .form-field-area-forgot {
