--- a/src/app/side-navbar/side-navbar.component.html
+++ b/src/app/side-navbar/side-navbar.component.html
@@ -23,7 +23,7 @@
   >
     <mat-label>site:</mat-label>
     <mat-select
-      value="site['siteID']"
+      [value]="selectSite"
       class="admin-addNew-form-permissionsSelect"
     >
       <mat-option
