Layout,resizing,dynamic site plans and bugs fixes

--- a/src/assets/stylesheets/componentStyles/navbar.scss
+++ b/src/assets/stylesheets/componentStyles/navbar.scss
@@ -148,7 +148,7 @@ $navbar-height: 50px;
       }
     }
     &-flName {
-      margin-top: 12px;;
+      margin-top: 12px;
       color: #3c4257;
       font-family: Inter;
       font-size: 16px;
@@ -161,7 +161,7 @@ $navbar-height: 50px;
       }
       &-logout {
         justify-content: center;
-        color: #0063F7;
+        color: #0063f7;
         font-family: Inter;
         font-size: 14px;
         font-weight: 500;
