--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@ body {
 
 body {
   // background: #edf4ff !important;
-  background: #F0F3FA !important;
+  background: #f0f3fa !important;
 }
 .form-field-area-login,
 .form-field-area-forgot {
